# encryption-python

./: .gitignore  LICENSE  README.md  absolutni_bigramova_matice.csv  bigram.py  decrypt.py  decrypting.ipynb  encrypt.py  krakatit.txt  metropolis.py  pyproject.toml  relativni_bigramova_matice.csv  smart_keygen.py  testing.html  testing.ipynb
data/: krakatit.txt  text_1000_sample_19_ciphertext.txt  text_1000_sample_1_key.txt  text_1000_sample_1_plaintext.txt
data/decrypted_text/: text_1000_sample_10_plaintext.txt  text_1000_sample_11_plaintext.txt  text_1000_sample_12_plaintext.txt  text_1000_sample_13_plaintext.txt  text_1000_sample_14_plaintext.txt  text_1000_sample_15_plaintext.txt  text_1000_sample_16_plaintext.txt  text_1000_sample_17_plaintext.txt  text_1000_sample_18_plaintext.txt  text_1000_sample_19_plaintext.txt  text_1000_sample_20_plaintext.txt  text_1000_sample_2_plaintext.txt  text_1000_sample_3_plaintext.txt  text_1000_sample_4_plaintext.txt  text_1000_sample_5_plaintext.txt  text_1000_sample_6_plaintext.txt  text_1000_sample_7_plaintext.txt  text_1000_sample_8_plaintext.txt  text_1000_sample_9_plaintext.txt  text_250_sample_10_plaintext.txt  text_250_sample_11_plaintext.txt  text_250_sample_12_plaintext.txt  text_250_sample_13_plaintext.txt  text_250_sample_14_plaintext.txt  text_250_sample_15_plaintext.txt  text_250_sample_16_plaintext.txt  text_250_sample_17_plaintext.txt  text_250_sample_18_plaintext.txt  text_250_sample_19_plaintext.txt  text_250_sample_1_plaintext.txt  text_250_sample_20_plaintext.txt  text_250_sample_2_plaintext.txt  (+27 more)
(+119 files in other folders)
